# pydevs

./: .env.example  .gitignore  README.md  pyproject.toml
apps/: sample.py
apps/captions/: prompts.py
apps/notes/: main.py  prompts.py  reasoning.md
apps/qdrant/: main.py
apps/read/: main.py
apps/summary/: article_context.txt  article_critique.md  article_draft.md  article_entities.txt  article_final_summary.md  article_keywords.txt  article_links.txt  article_resources.txt  article_takeaways.txt  article_topics.txt  main.py
apps/text-splitter/: TextService.py
src/pydevs/: __init__.py
src/pydevs/services/: base.py  elevel_labs.py  eleven_labs.py  fuse.py  groq.py  ollama.py  openai.py  vector.py
src/pydevs/types/: completion.py
tests/: conftest.py  test_fuse.py  test_ollama.py  test_openai.py  test_summary.py  test_vectordb.py
